Fix button no transition, fix too high features

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -8,6 +8,7 @@
   max-width: em(300);
   min-width: em(300);
   text-transform: uppercase;
+  transition: opacity .25s;
   white-space: nowrap;
 
   &[disabled] {
